--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "wait-on": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "wait-on": "^6.0.0"
   },
   "scripts": {
     "start": "concurrently \"cross-env BROWSER=none cross-env craco start\" \"wait-on http://localhost:3000 && electron .\"",
