--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo-electron-react",
   "version": "0.1.0",
   "private": true,
-  "main": "public/electron.js",
+  "main": "public/main.js",
   "homepage": "./",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -15,6 +15,8 @@
     "concurrently": "^7.0.0",
     "craco-less": "^2.0.0",
     "cross-env": "^7.0.3",
+    "fs-extra": "^10.0.0",
+    "lowdb": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
