--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "concurrently": "^7.0.0",
     "craco-less": "^2.0.0",
     "cross-env": "^7.0.3",
+    "electron-json-storage": "^4.5.0",
+    "fs-extra": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
