--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "concurrently": "^7.0.0",
     "craco-less": "^2.0.0",
     "cross-env": "^7.0.3",
+    "dexie": "^3.2.0",
+    "dexie-react-hooks": "^1.1.1",
     "electron-json-storage": "^4.5.0",
     "fs-extra": "^10.0.0",
     "react": "^17.0.2",
